--- a/chigow_stores/e_store/templates/home.html
+++ b/chigow_stores/e_store/templates/home.html
@@ -1,57 +1,98 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/5c143bf368.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet"  href="{% static 'home.css' %}">
+    <link rel="stylesheet" href="{% static 'e_store/css/home.css' %}?{{ cache_id }}">
     <title>Document</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg mt-4">
-        <div class="container flex-column h-100 d">
-            <div class="container-fluid d-flex flex-row justify-content-between h-50 e">
-                <div class="">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="top-section">
+        <div class="frame-1"></div>
+        <div class="frame-2"></div>
+        <nav class="navbar-expand-lg">
+            <div class="container flex-column h-100 d">
+                <div class="container-fluid d-flex flex-row justify-content-between align-items-center nav-first">
+                    <div class="search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <button class="btn menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu"
+                        aria-controls="offcanvasMenu">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="logo">
+                        <p>CHIGOW-STORES</p>
+                    </div>
+                    <div class="cart-profile">
+                        <ul class="navbar-nav">
+                            <li class="nav-item quick-l">
+                                <a class="nav-link" href="#">
+                                    <i class="fa-solid fa-user"></i>
+                                    <span class="icon-text">Account</span>
+                                </a>
+                            </li>
+                            <li class="nav-item  quick-l">
+                                <a class="nav-link" href="#">
+                                    <i class="fa-solid fa-bag-shopping"></i>
+                                    <span class="icon-text">Shopping</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="logo">
-                    <h3>CHIGOW-STORES</h3>
-                </div>
-                <div class="">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-user"><span class="icon-text">Account</span></i></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-bag-shopping"><span class="icon-text">Shopping</span></i></a>
-                        </li>
-                    </ul>
+                <div class="offcanvas offcanvas-start w-50" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasMenuLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body h-50 nav-second">
+                        <ul class="navbar-nav justify-content-between w-100 align-items-end">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Jewelry & Accessories</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Clothing & Shoes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home & Living</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Wedding & Party</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Toys & Entertainment</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="container-fluid h-50 align-items-end f">
-                <ul class="navbar-nav justify-content-between">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Jewelry & Accessories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Clothing & Shoes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home & Living</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Wedding & Party</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Toys & Entertainment</a>
-                    </li>
-                </ul>
+        </nav>
+
+        <section class="container-fluid mt-1 background-tint  hero">
+            <div class="container row hero-container">
+                <div class="col hero-txt">
+                    <h1 class="hero-title animated-text">Collections</h1>
+                    <p class="hero-subtitle animated-text delayed-1">You Can Explore And Shop Many Different Collection <br>from various brands
+                        here.
+                    </p>
+                    <button class="hero-btn animated-text delayed-2"><i class="fa-solid fa-bag-shopping"></i>Shop Now</button>
+                </div>
+                <div class="col hero-img-div">
+                    <div class="hero-image">
+                        <img class="hero-img animated-img" src="../static/e_store/images/hero-img.png" alt="">
+                    </div>
+                </div>
             </div>
-        </div>
-    </nav>
+        </section>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
